Fixed bug where right clicking in the sideBar caused acrash.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@305 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/ChangeLog.txt
+++ b/chandler/application/ChangeLog.txt
@@ -4,3 +4,6 @@
 
     * You can now set WXREDIRECT=0 if you don't want WX to redirect stdout
       to a popup windows
+
+2003-04-10 Jed Burgess <jed@osafoundation.org>
+    * Fixed bug where right clicking in the sideBar caused a crash.
