Made it so that entering addresses in the uriBox is no longer case-sensitive.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@476 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/ChangeLog.txt
+++ b/chandler/application/ChangeLog.txt
@@ -7,3 +7,7 @@
 
 2003-04-10 Jed Burgess <jed@osafoundation.org>
     * Fixed bug where right clicking in the sideBar caused a crash.
+    
+2003-04-28 Jed Burgess <jed@osafoundation.org>
+    * Made it so that entering addresses in the uriBox is no longer 
+      case sensitive.
