Added an installed parcels view that displays all of the parcels that have been installed and allows the user to navigate to them.  This parcel does not appear in the SideBar, but can be accessed by going to the empty url (or '/').
git-svn-id: http://svn.osafoundation.org/chandler/trunk@530 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/ChangeLog.txt
+++ b/chandler/application/ChangeLog.txt
@@ -11,3 +11,6 @@
 2003-04-28 Jed Burgess <jed@osafoundation.org>
     * Made it so that entering addresses in the uriBox is no longer 
       case sensitive.
+      
+2003-05-20 Jed Burgess <jed@osafoundation.org>
+    * Added a InstalledParcelsViewer parcel to handle the root url.
