--- a/chandler/application/ChangeLog.txt
+++ b/chandler/application/ChangeLog.txt
@@ -14,3 +14,6 @@
       
 2003-05-20 Jed Burgess <jed@osafoundation.org>
     * Added a InstalledParcelsViewer parcel to handle the root url.
+    
+2003-06-19 Jed Burgess <jed@osafoundation.org>
+    * Added the current version number to the status bar.  
