Hooked up the View menu items to show/hide the SideBar, NavigationBar, ActionsBar, and StatusBar. Added a shell for the ActionsBar class.  The guts are coming next. Incremented the version number in Application.py.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@593 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/ChangeLog.txt
+++ b/chandler/application/ChangeLog.txt
@@ -17,3 +17,9 @@
     
 2003-06-19 Jed Burgess <jed@osafoundation.org>
     * Added the current version number to the status bar.  
+
+2003-06-19 Jed Burgess <jed@osafoundation.org>
+    * Hooked up the View menu items to show/hide the SideBar, NavigationBar,
+      ActionsBar, and StatusBar.
+    
+    
