Added the ability for parcels to add their version of the ActionsBar to ChandlerWindow. Added an example of doing this to MrMenus.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@632 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/ChangeLog.txt
+++ b/chandler/application/ChangeLog.txt
@@ -22,4 +22,6 @@
     * Hooked up the View menu items to show/hide the SideBar, NavigationBar,
       ActionsBar, and StatusBar.
     
-    
+2003-07-07 Jed Burgess <jed@osafoundation.org>
+    * Added the ability for parcels to add their version of the ActionsBar
+      to ChandlerWindow.
