Moved parcels/repository to parcels/OSAF/repository
git-svn-id: http://svn.osafoundation.org/chandler/trunk@651 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/contacts/ChangeLog.txt
+++ b/chandler/parcels/osaf/contacts/ChangeLog.txt
@@ -1,5 +1,9 @@
 # ChangeLog for Contacts Parcel
 
+2003-07-10 john@osafoundation.org
+
+   * Moved from parcels directory to parcels/OSAF.
+
 2003-03-09 Andy Hertzfeld <andy@differnet.com>
 
     This initial entry describes work since the .02 release:
