Removed the nightly.py script (replaced by singlebuild.py), and also removed some code from hardhatlib that was called from nightly.py.  Added the ability for HardHat to search for a __hardhat__.py in parent directories to make it easier to run scripts, for example, to run the wxPython demo:
    cd osaf/chandler/wxpython/wxPython/demo
    hardhat.py demo.py


git-svn-id: http://svn.osafoundation.org/chandler/trunk@657 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/hardhat/ChangeLog.txt
+++ b/hardhat/ChangeLog.txt
@@ -17,3 +17,15 @@
 
     * Merged wxPython 2.4.1.2 into our codebase
 
+2003-07-11 Morgen Sagen
+
+    * Removed nightly.py which is superceded by singlebuild.py
+
+    * HardHat can now be run from any directory as long as a parent directory
+        contains a __hardhat__.py file (HardHat will now recursively check
+        parent directories until a __hardhat__.py file is found).  This makes
+        it easier to run scripts, for example, to run the wxPython demo:
+
+            cd osaf/chandler/wxpython/wxPython/demo
+            hardhat.py demo.py
+        
