Added the -l <scripts> flag which 'lints' the scripts using PyChecker.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@659 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/hardhat/ChangeLog.txt
+++ b/hardhat/ChangeLog.txt
@@ -28,4 +28,5 @@
 
             cd osaf/chandler/wxpython/wxPython/demo
             hardhat.py demo.py
-        
+
+    * Added the -l <scripts> option which "lints" the scripts using PyChecker
