Bug#421, columnar view resize problems on the mac
git-svn-id: http://svn.osafoundation.org/chandler/trunk@673 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/calendar/ChangeLog.txt
+++ b/chandler/parcels/osaf/calendar/ChangeLog.txt
@@ -4,6 +4,7 @@
 
    * Fixes for Bug#789 (call Destroy or use wxMessageBox for dialogs)
    * Re-entered fix for Bug#425
+   * Mostly fixed Bug#421 on the mac: ends up drawn correctly on resize.
 
 2003-07-10 john@osafoundation.org
 
