Changed repository parcel to use wxTreeListCtrl.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@674 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/repository/ChangeLog.txt
+++ b/chandler/parcels/osaf/repository/ChangeLog.txt
@@ -1,6 +1,12 @@
+2003-07-15 Jed Burgess <jed@osafoundation.org>
+   
+   * Changed Repository parcel to use wxTreeListCtrl
+
+
 2003-07-10 john@osafoundation.org
 
    * Moved from parcels directory to parcels/OSAF.
+
 
 2003-04-13 Katie Capps Parlante <capps@osafoundation.org>
 
