Fixed Bug#467 where an improperly formatted remote url could cause an exception within Chandler.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@676 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/ChangeLog.txt
+++ b/chandler/application/ChangeLog.txt
@@ -25,3 +25,8 @@
 2003-07-07 Jed Burgess <jed@osafoundation.org>
     * Added the ability for parcels to add their version of the ActionsBar
       to ChandlerWindow.
+      
+2003-07-15 Jed Burgess <jed@osafoundation.org>
+    * Improperly formatted remote url's no longer cause an exeption within
+      Chandler.  Parcels with xrc that doesn't have <label> as the first 
+      item in their menus will no longer cause an exception within Chandler.
