Fixed path to AboutCalendar.html to reflect the new location of calendar parcel; added the AboutCalendar menu back -- it got lost somehow; minor edit to AboutCalendar.html.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@686 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/calendar/ChangeLog.txt
+++ b/chandler/parcels/osaf/calendar/ChangeLog.txt
@@ -1,5 +1,10 @@
 # ChangeLog for Calendar Parcel
 
+2003-07-15
+   * Fix for Bug#456 ("About Calendar" info page missing)
+   * Removed discussion of a now-dead bug from the About page.
+   
+
 2003-07-14 capps@osafoundation.org
 
    * Fixes for Bug#789 (call Destroy or use wxMessageBox for dialogs)
