Internationalized strings with gettext()
git-svn-id: http://svn.osafoundation.org/chandler/trunk@696 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/zaobao/ChangeLog.txt
+++ b/chandler/parcels/osaf/zaobao/ChangeLog.txt
@@ -30,3 +30,5 @@
 This allows sharing of views, whereby each view has its own list of RSS feeds
    * Support Andy's Viewer Parcel sharing framework
    
+2003-07-16 Ducky Sherwood <ducky@osafoundation.org>
+   * Internationalized strings with gettext()
