Added "About Contacts" screen
git-svn-id: http://svn.osafoundation.org/chandler/trunk@704 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/contacts/ChangeLog.txt
+++ b/chandler/parcels/osaf/contacts/ChangeLog.txt
@@ -1,5 +1,9 @@
 # ChangeLog for Contacts Parcel
 
+2003-07-21 ducky@osafoundation.org
+
+   * Added "About Contacts" Help menu option
+
 2003-07-10 john@osafoundation.org
 
    * Moved from parcels directory to parcels/OSAF.
