Updated ChangeLog with recent repository changes
git-svn-id: http://svn.osafoundation.org/chandler/trunk@735 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/ChangeLog.txt
+++ b/chandler/application/ChangeLog.txt
@@ -38,3 +38,8 @@
 2003-07-18 Morgen Sagen <morgen@osafoundation.org>
     * Parcels can now get loaded from an external directory using the PARCELDIR
       directory
+
+2003-07-24 Katie Capps Parlante <capps@osafoundation.org>
+   * Repository is loaded on init, globally accessible via app.repository.
+   * Repository is saved when main Chandler window closes.
+   * Calendar data parcel is loaded on init (currently hardcoded)
