fixed the wrong end-of-line characters in NotificationManager.py, 	as reported by John Anderson.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@744 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/agents/Notifications/ChangeLog.txt
+++ b/chandler/application/agents/Notifications/ChangeLog.txt
@@ -25,3 +25,10 @@
 
     * initial checkin of the Notification Manager, written by Andrew Francis
     <andrewfr_ice@yahoo.com>
+
+2003-07-29 Andy Hertzfeld <andy@differnet.com>
+
+    * fixed the end-of-line characters in NotificationManager.py, as reported
+      by John Anderson
+      
+  
