--- a/chandler/application/agents/Notifications/ChangeLog.txt
+++ b/chandler/application/agents/Notifications/ChangeLog.txt
@@ -31,4 +31,7 @@
     * fixed the end-of-line characters in NotificationManager.py, as reported
       by John Anderson
       
-  
+2003-08-06 Andy Hertzfeld <andy@differnet.com>
+
+    * made the notification manager be persisent.  This means registrations, subscriptions and
+      declarations persist between program launches, but the actual queued notifications do not.
