Updated change log with unit test
git-svn-id: http://svn.osafoundation.org/chandler/trunk@794 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/calendar/ChangeLog.txt
+++ b/chandler/parcels/osaf/calendar/ChangeLog.txt
@@ -1,5 +1,8 @@
 # ChangeLog for Calendar Parcel
 
+2003-08-07 Katie Capps Parlante <capps@osafoundation.org>
+   * Basic unit test for calendar data parcel, works with framework
+
 2003-07-24 Katie Capps Parlante <capps@osafoundation.org>
    * Created calendar data parcel as sub parcel of calendar parcel
    * Moved calendar viewer parcel code on to new repository
