Added location to calendar model, changed names of calendar model attributes
git-svn-id: http://svn.osafoundation.org/chandler/trunk@809 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/calendar/ChangeLog.txt
+++ b/chandler/parcels/osaf/calendar/ChangeLog.txt
@@ -1,5 +1,9 @@
 # ChangeLog for Calendar Parcel
 
+2003-08-11 Katie Capps Parlante <capps@osafoundation.org>
+   * Added Location to calendar model
+   * Changed names of calendar model attributes
+
 2003-08-07 Katie Capps Parlante <capps@osafoundation.org>
    * Basic unit test for calendar data parcel, works with framework
 
