big change to port contacts to Andi's new repository.  Added a schema,        and made the application load it.  Modified lots of code to use the        new model.   There's probably some unknown breakage, but it seems to        be working well enough for the initial check-in
git-svn-id: http://svn.osafoundation.org/chandler/trunk@856 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/contacts/ChangeLog.txt
+++ b/chandler/parcels/osaf/contacts/ChangeLog.txt
@@ -1,5 +1,10 @@
 # ChangeLog for Contacts Parcel
 
+2003-08-19 andy@differnet.com
+
+   * ported contacts package to Andi's new repository.  Lots of changes, and probably
+     lots of breakage, but it's working well enough for the initial check-in
+     
 2003-07-21 ducky@osafoundation.org
 
    * Added "About Contacts" Help menu option
