--- a/chandler/parcels/osaf/repositoryviewer/ChangeLog.txt
+++ b/chandler/parcels/osaf/repositoryviewer/ChangeLog.txt
@@ -1,3 +1,6 @@
+2003-08-28 Katie Capps Parlante <capps@osafoundation.org>
+   * Added code to list elements in a list or set in the html detail view
+
 2003-08-19 Katie Capps Parlante <capps@osafoundation.org>
    * Created new RepositoryViewer parcel, to use the new repository.
      This parcel may be short lived, or only used for debugging purposes,
