initial check-in of the agent framework:
	caveat: only one test agent, with an instruction to echo instant messages to standard output
	caveat: no GUI classes yet

	more examples/tests coming soon.
	it's still incomplete in a variety of ways.

	added schema for persistent agent data
	added persistent classes Action, AgentItem, Condition, Instruction, Repertoire
	added regular python classes: Agent, AgentManager
	also,
	    * made Application.py load the agent schema and initialize the
	      agent manager, and keep a reference to it in the app object
	    * made the Jabber code generate a notification for message-arrived,
	    passing the message data in the notification data
	    * initialized the data field in a notification


git-svn-id: http://svn.osafoundation.org/chandler/trunk@1016 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/agents/ChangeLog.txt
+++ b/chandler/application/agents/ChangeLog.txt
@@ -5,3 +5,11 @@
     * added the agents sub-directory
     * added the Notification Manager, written by Andrew Francis
     <andrewfr_ice@yahoo.com>
+    
+2003-08-31 Andy Hertzfeld <andy@differnet.com>
+
+    * first big check-in of agent framework
+    * added model directory with Chandler schema for Agent persistent data, agents.xml
+    * added model classes AgentItem, Action, Condition, Instruction, Repertoire
+    * added Agent and AgentManager classes
+    
