made the Notification manager call wxWakeupIdle when events are posted; 	 Viewer parcel no longer calls RequestMore
	 cleaned up a bunch of contact model conversion casualties, involving
	 looking up contacts by jabberID

	 added a JabberContactMethod subclass to the schema

	 made the contacts package receive presence changed events, and
	 removed the callback in ChandlerJabber, plus misc cleanups.


git-svn-id: http://svn.osafoundation.org/chandler/trunk@1019 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/agents/Notifications/ChangeLog.txt
+++ b/chandler/application/agents/Notifications/ChangeLog.txt
@@ -35,3 +35,8 @@
 
     * made the notification manager be persisent.  This means registrations, subscriptions and
       declarations persist between program launches, but the actual queued notifications do not.
+
+2003-09-01 Andy Hertzfeld <andy@differnet.com>
+
+    * made _postNotification call wxWakeUpIdle so we can use idle events to poll for
+      notifications, whilw still allowing the main loop to sleep most of the time
