added a repertoire item to the agent, so agents can reference 	 actions and conditions that aren't currently associated with 	 instructions.  Also, added a repertoire to the test agent.
	 Also, made a small fix to the RepositoryViewer to show the proper
	 kind for each item, instead of calling everything an item


git-svn-id: http://svn.osafoundation.org/chandler/trunk@1063 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/agents/ChangeLog.txt
+++ b/chandler/application/agents/ChangeLog.txt
@@ -31,3 +31,11 @@
     condition.  Three comparison modes are provides: equals, contains, and matches,
     where matches treats the string in the condtion as a regular expression.
     
+2003-09-04 Andy Hertzfeld <andy@differnet.com>
+
+    * implemented the Repertoire class, so agents can reference conditions and actions
+      that aren't currently used in instructions
+      
+    * added a repertoire with an action to the test agent
+
+    
