Added displayAttribute to calendar kinds
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1082 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/calendar/ChangeLog.txt
+++ b/chandler/parcels/osaf/calendar/ChangeLog.txt
@@ -4,6 +4,7 @@
    * Added participant to calendar model
    * Changed table view to use wxListCtrl instead of wxGrid
    * Added Generate Events feature (menu item, unit test)
+   * Added displayAttribute to calendar kinds
 
 2003-08-11 Katie Capps Parlante <capps@osafoundation.org>
    * Added Location to calendar model
