* added a 'confirmFlag' to actions; if set, it asks the user's permission via        a dialog before executing the action.
     *  added an action permission request string, to specify the text for the
        permission request

     *  made deferredActions check the confirmFlag and put up a permissions
        dialog, if necessary


git-svn-id: http://svn.osafoundation.org/chandler/trunk@1084 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/agents/ChangeLog.txt
+++ b/chandler/application/agents/ChangeLog.txt
@@ -52,4 +52,16 @@
        
      * used DialogAction to make the test agent display a dialog with the
        instant message body if it meets the condition
+       
+ 2003-09-04 Andy Hertzfeld <andy@differnet.com>
+
+     * added a 'confirmFlag' to actions; if set, it asks the user's permission via
+       a dialog before executing the action.
+       
+     *  added an action permission request string, to specify the text for the
+        permission request
+     
+     *  made deferredActions check the confirmFlag and put up a permissions
+        dialog, if necessary
+        
     
